Test/dafny0/Shadows.dfy.expect
Shadows.dfy(6,19): Error: Duplicate type-parameter name: beta
Shadows.dfy(7,13): Warning: Shadowed type-parameter name: alpha
Shadows.dfy(8,27): Error: Duplicate type-parameter name: beta
Shadows.dfy(9,21): Warning: Shadowed type-parameter name: alpha
Shadows.dfy(11,31): Error: Duplicate parameter name: x
Shadows.dfy(18,10): Warning: Shadowed local-variable name: x
Shadows.dfy(19,10): Error: Duplicate local-variable name: y
Shadows.dfy(26,10): Error: Duplicate local-variable name: f
Shadows.dfy(32,12): Warning: Shadowed local-variable name: x
Shadows.dfy(38,28): Warning: Shadowed bound-variable name: x
Shadows.dfy(39,40): Warning: Shadowed bound-variable name: y
5 resolution/type errors detected in Shadows.dfy
